Fix alignment on cards

--- a/rh/client/scss/components/_card.scss
+++ b/rh/client/scss/components/_card.scss
@@ -54,6 +54,7 @@
   margin-top: $global-margin;
   @include bottomless;
   font-size: .9rem;
+  text-align: left;
 }
 
 .card-actions {
